...
                index = newIndex;
              });
            },
            items: [
              BottomNavigationBarItem(icon: Icon(Icons.home), label: "Home"),
              BottomNavigationBarItem(
                  icon: Icon(Icons.event_available), label: "Booking"),
              BottomNavigationBarItem(
                  icon: Icon(Icons.settings), label: "Settings"),
            ],
          ),
          body: SafeArea(
              child: IndexedStack(
            index: index,
            children: [
...
                                ),
                                Container(
                                  width: double.infinity,
                                  height: 50,
                                  margin: EdgeInsets.symmetric(horizontal: 5.0),
                                  child: ElevatedButton(
                                    child: Text("View More",
                                        style: TextStyle(
                                            color: Colors.white,
                                            fontSize: 15,
                                            fontFamily: "Helvetica")),
                                    onPressed: () {
                                      Navigator.push(
...
