...
    {
      'title': 'Discover',
      'subtitle': 'Discover wedding venues near you with just a few clicks',
      'image': 'assets/images/onboarding2.jpg',
    },
    {
      'title': 'Book',
      'subtitle': 'Book a wedding venue through the app with just a few clicks',
      'image': 'assets/images/onboarding3.jpg',
    },
    {
      'title': 'List',
      'subtitle': 'If you are a venue you can list your venue easly on the app',
...
